[package]
name = "rust_unfollow"
version = "0.1.1"
authors = ["CatTheFat <40761063+CatTheFat@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome.git" }
failure = "0.1"
